<package format="2">
  <name>cliff_detector</name>
  <version>1.0.1</version>
  <description>Cliff detector package</description>
  <author>Michal Drwiega (http://www.mdrwiega.com)</author>
  <maintainer email="drwiega.michal@gmail.com">Michal Drwiega</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/depth_nav_tools</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>sensor_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>depth_nav_msgs</depend>
</package>
