<package format="2">
  <name>cliff_detector</name>
  <version>1.0.1</version>
  <description>Cliff detector package</description>
  <author>Michal Drwiega (http://www.mdrwiega.com)</author>
  <maintainer email="drwiega.michal@gmail.com">Michal Drwiega</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/depth_nav_tools</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
