<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>cliff_detector</name>
  <version>1.0.1</version>
  <description>Cliff detector package</description>
  <maintainer email="drwiega.michal@gmail.com">Michal Drwiega (https://mdrwiega.com/)</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/depth_nav_tools</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
