<package format="2">
  <name>depth_nav_msgs</name>
  <version>1.0.0</version>
  <description>Messages used by nodes in the depth_nav_tools.</description>
  <author>Michal Drwiega</author>
  <maintainer email="drwiega.michal@gmail.com">Michal Drwiega</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/depth_nav_tools</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
