<package format="2">
  <name>depth_nav_tools</name>
  <version>1.0.1</version>
  <description>The depth_nav_tools metapackage.</description>
  <author>Michal Drwiega (http://www.mdrwiega.com)</author>
  <maintainer email="drwiega.michal@gmail.com">Michal Drwiega</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/depth_nav_tools</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>laserscan_kinect</exec_depend>
  <exec_depend>cliff_detector</exec_depend>
  <exec_depend>depth_nav_msgs</exec_depend>
  <exec_depend>nav_layer_from_points</exec_depend>
  <exec_depend>depth_sensor_pose</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
