<package format="2">
  <name>depth_sensor_pose</name>
  <version>1.0.0</version>
  <description>Depth sensor pose calibration package</description>
  <author>Michal Drwiega (http://www.mdrwiega.com)</author>
  <maintainer email="drwiega.michal@gmail.com">Michal Drwiega</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/depth_nav_tools</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>costmap_2d</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>sensor_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>libpcl-all</depend>
  <depend>pcl_ros</depend>

</package>
