<package format="2">
  <name>laserscan_kinect</name>
  <version>1.0.1</version>
  <description>
  Package laserscan_kinect converts depth image from Microsoft Kinect sensor
  to 2D laser scanner format. Conversion algorithm allows to remove ground from depth image 
  and compensate sensor mount tilt angle relative to the ground.
  </description>
  <author>Michal Drwiega (http://www.mdrwiega.com)</author>
  <maintainer email="drwiega.michal@gmail.com">Michal Drwiega</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/depth_nav_tools</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>sensor_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
