<package format="2">
  <name>nav_layer_from_points</name>
  <version>1.0.0</version>
  <description> Plugin-based layers for the navigation software. </description>
  <author>Michal Drwiega (http://www.mdrwiega.com)</author>
  <maintainer email="drwiega.michal@gmail.com">Michal Drwiega</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/depth_nav_tools</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

<export>
  <build_type>ament_cmake</build_type>
</export>

</package>


